# Megatop

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MSS2check.ipynb  README.md  Snakefile  example.ipynb  get_carlos_sims.py  get_example_config.py  noise_cov_testing.ipynb  pipe_launcher.py  pyproject.toml  setup.py  test.txt  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Megatop/: .gitignore  .pre-commit-config.yaml
Megatop/docs/getting_started/: tutorial.md
Megatop/docs/pipeline/: compsep.md  mask.md  preprocess.md
Megatop/outputs/: config_log.yaml
Megatop/paramfiles/: CarlosSims0000.yml  CarlosSims0000_same_beam.yml  ben_sims_unfiltered.yml  default_config.yaml  minimal_test.yml  minimal_test_d1.yml  test_preproc_mpi.yml
Megatop/runfiles/: run_default.sh
Megatop/src/megatop/: _converter.py  config.py  data_manager.py
Megatop/src/megatop/pipeline/: TF_computation_interface.py  cl2r_estimater.py  mask_handler.py  noise_spectra_estimater.py  obsmat_sanity_checker.py  parametric_separater.py  pixel_noisecov_estimater.py  precomputationer.py  preprocesser.py
Megatop/src/megatop/plot/: comp_sep_plotter.py  map2cl_plotter.py  noise_spectra_plotter.py  preproc_plotter.py
Megatop/src/megatop/utils/: compsep.py  passband.py
Megatop/tests/utils/: test_mock.py
docs/: api.md  index.md  science.md
docs/api/: config.md  landscapes.md  megatop.md  utils.md
docs/getting_started/: installation.md  tutorial.md
docs/pipeline/: binning.md  cl2r.md  compsep.md  map2cl.md  mask.md  mock.md  noise_covariance.md  noise_spectra.md  preprocess.md  tf.md
megatop/: V3calc.py  metadata_manager.py  utils.py
notebooks/: MSS2NoiseMaps.py  MSS2ObsMatTest.ipynb  MSS2check.ipynb  minimal_test_bandpass.ipynb  svd_obs_mat.ipynb  white_noise_lvl_coadd_dico_ukarcmin_MSS2_fsky0.19.npy  white_noise_lvl_dico_ukradsquared_MSS2_fsky0.19.npy
output_root/: config_log.yaml
outputs/: config.yaml  config_log.yaml
paramfiles/: CarlosSims0000.yml  CarlosSims0000_same_beam.yml  MSS2.yml  SO_test.yaml  ben_sims.yml  ben_sims_multifreq.yml  ben_sims_multifreq_beamthenobs.yml  ben_sims_multifreq_noiseless.yml  ben_sims_multifreq_unbeamed.yml  ben_sims_multifreq_unbeamed_unfiltered.yml  ben_sims_noiseless.yml  ben_sims_unfiltered.yml  camille_default.yaml  config_baptiste.yml  config_paper_test.yml  d0s0_goal_optimisitc_wolz_etal.yaml  d0s0_goal_optimistic_wolz_etal.yaml  default_config.yaml  e2e_check.yaml  e2e_check_car.yaml  idark_minimal_test.yml  minimal_d10s5.yml  minimal_sh.sh  minimal_test.yml  minimal_test_ben.yml  minimal_test_ben_sims.yml  minimal_test_d1.yml  npipe_d0s0.yaml  npipe_simu.yaml  npipe_simu_noiseless.yaml  npipe_simu_noiseless_masked.yaml  planck_npipe_masked.yaml  planck_npipe_masked_SO_mask.yaml  planck_npipe_masked_bir.yaml  planck_npipe_masked_bir_test.yaml  planck_npipe_masked_debug.yaml  planck_npipe_masked_diy.yaml  planck_npipe_masked_ps.yaml  planck_npipe_masked_ps_test.yaml  planck_test.yml  (+10 more)
pipeline/: get_noise_cov_pixel.py  map_to_cl.py  mask_handler.py  onfly_sims.py  parametric_separation.py  plot_noise_covariance.py  plot_spectra.py  pre_processing.py  run_all_MSS2_noMPI.sh  run_all_minimal_test.sh  test_mpi_noise_cov.sh
runfiles/: 25npipe_job.sh  heavy_duty_npipe.sh  import argparse.py  npipe_job.sh  only_mcmc.sh  planck_job.sh  plots.sh  run_d0s0_goal_optimisitc_wolz_etal.sh  run_d0s0_goal_optimistic_wolz_etal.sh  run_default.sh  run_e2e_check.sh  snake.sh  test.sh
runfiles/snakemake_profiles/slurm/: config.yaml
scratch/sherry/: obs-mat.py
scratch/sherry/Carlos-BBMaster-Sim/: apply_obs.py  load-maps.py  obs-mat.py  obsmat_TT.py  plot_maps.py
scripts/: Soopercool_crossCL_splits_GaussianDust.py  get_carlos_sims.py  get_noise_cov_pixel.py  save_plot_cov.py
src/megatop/: __init__.py  _converter.py  config.py  data_manager.py  from enum import Enum, IntEnum.py  landscapes.py
src/megatop/pipeline/: TF_computation_interface.py  binner_maker.py  cl2r_estimater.py  from __future__ import annotations.py  get_noise_cov_pixel.py  import argparse.py  map_to_cl.py  map_to_cler.py  mask_checker.py  mask_handler.py  mask_plotter.py  mock_plotter.py  mocker.py  noise_preprocesser.py  noise_spectra_estimater.py  noise_spectra_estimator.py  noisecovpixel_estimater.py  obsmat_sanity_checker.py  onfly_sims.py  parametric_separater.py  parametric_separation.py  pixel_noisecov_estimater.py  plot_noise_covariance.py  plot_pre_processing.py  plot_spectra.py  pre_processing.py  preproc_plotter.py  preprocesser.py  run_all.sh  run_all_CarlosSims0000.sh  run_all_MSS2.sh  run_all_MSS2_noMPI.sh  run_all_bensims.sh  run_all_minimal_test.sh  run_all_minimal_test_d1.sh  run_all_minimal_test_idark.pbs  test_MPI_pre_proc.sh  test_mpi_noise_cov.sh
src/megatop/pipeline_/: map_to_cl.py  mask_handler.py  mocker.py  noise_spectra_estimator.py  parallel_mocker.py  parametric_separation.py  pixel_noisecov_estimater.py  preprocesser.py
src/megatop/plot/: comp_sep_plotter.py  map2cl_plotter.py  mask_plotter.py  mcmc_plotter.py  mock_plotter.py  noise_cov_plotter.py  noise_spectra_plotter.py  preproc_plotter.py  r_stats_plotter.py
src/megatop/plot_/: comp_sep_plotter.py  map2cl_plotter.py  mask_plotter.py  mock_plotter.py  noise_cov_plotter.py  noise_spectra_plotter.py  preproc_plotter.py
src/megatop/utils/: TF_utils.py  V3calc.py  V3p1calc.py  __init__.py  binning.py  compsep.py  config.py  harmonic.py  logger.py  mask.py  mask_utils.py  meta.py  metadata_manager.py  mock.py  mock_utils.py  mpi.py  noisecalc_modified.py  passband.py  plot.py  precomputations.py  preproc.py  preproc_utils.py  spectra.py  timer.py  utils.py
tests/: test_config.py  test_e2e_car.py  test_landscapes.py  test_yaml_baseline.py
tests/data/: norm_nHits_SA_35FOV_ns0064.fits
tests/utils/: test_binning.py  test_config.py  test_harmonic.py  test_harmonics.py  test_mask.py  test_mock.py  test_preproc.py  test_spectra_estimation.py
