[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "Megatop"
authors = [{ name = "Baptiste Jost" }, { name = "Benjamin Beringue" }]
version = "0.1.0"
description = "A map-based CMB polarization data analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "camb",
  "fgbuster @ git+https://github.com/fgbuster/fgbuster.git@std_inst_bandpass",
  "healpy",
  "matplotlib",
  "numpy",
  "pymaster",
  "pysm3 @ git+https://github.com/galsci/pysm.git@3.4.1a1",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
mpi = ["mpi4py"]

[project.scripts]
"megatop-compsep" = "megatop.pipeline.parametric_separation:main"
"megatop-map2cl" = "megatop.pipeline.map_to_cl:main"
"megatop-mask-run" = "megatop.pipeline.mask_handler:main"
"megatop-mask-plot" = "megatop.pipeline.mask_plotter:main"
"megatop-mock-run" = "megatop.pipeline.mocker:main"
"megatop-mock-plot" = "megatop.pipeline.mock_plotter:main"
"megatop-noisecov-run" = "megatop.pipeline.noisecovpixel_estimater:main"
"megatop-noisecov-plot" = "megatop.pipeline.plot_noise_covariance:main"
"megatop-preproc-run" = "megatop.pipeline.preprocesser:main"
"megatop-preproc-plot" = "megatop.pipeline.preproc_plotter:main"
"megatop-spectra-plot" = "megatop.pipeline.plot_spectra:main"

[tool.ruff]
line-length = 100
exclude = ["scripts/get_carlos_sims.py"]

[tool.ruff.lint]
extend-select = [
  # "ARG",  # flake8-unused-arguments
  # "B",    # flake8-bugbear
  # "C4",   # flake8-comprehensions
  # "EM",   # flake8-errmsg
  # "EXE",  # flake8-executable
  # "FURB", # refurb
  # "G",    # flake8-logging-format
  "I", # isort
  # "ICN",  # flake8-import-conventions
  # "NPY",  # NumPy specific rules
  # "PD",   # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",   # pylint
  # "PT",   # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  # "RET",  # flake8-return
  "RUF", # Ruff-specific
  # "SIM",  # flake8-simplify
  "T10", # flake8-debugger
  # "T20",  # flake8-print
  "UP", # pyupgrade
  # "YTT", # flake8-2020
]
ignore = [
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
]
