[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "Megatop"
authors = [
    { name = "Baptiste Jost" },
    { name = "Benjamin Beringue" },
    { name = "Simon Biquard" },
    { name = "Amalia Aguilar" },
]
version = "0.1.0"
description = "A map-based CMB polarization data analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs",
    "camb",
    "cattrs",
    "fgbuster @ git+https://github.com/fgbuster/fgbuster.git@std_inst_bandpass",
    "healpy",
    "matplotlib",
    "numpy",
    "pymaster",
    "pysm3 @ git+https://github.com/galsci/pysm.git@f9d1f1a",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
mpi = ["mpi4py"]
dev = ["pytest"]

[project.scripts]
"megatop-compsep-run" = "megatop.pipeline.parametric_separater:main"
"megatop-compsep-plot" = "megatop.plot.comp_sep_plotter:main"
"megatop-map2cl-run" = "megatop.pipeline.map_to_cler:main"
"megatop-map2cl-plot" = "megatop.plot.map2cl_plotter:main"
"megatop-mask-run" = "megatop.pipeline.mask_handler:main"
"megatop-mask-plot" = "megatop.plot.mask_plotter:main"
"megatop-mock-run" = "megatop.pipeline.mocker:main"
"megatop-mock-plot" = "megatop.plot.mock_plotter:main"
"megatop-noisecov-run" = "megatop.pipeline.pixel_noisecov_estimater:main"
"megatop-noisecov-plot" = "megatop.plot.noise_cov_plotter:main"
"megatop-preproc-run" = "megatop.pipeline.preprocesser:main"
"megatop-preproc-plot" = "megatop.plot.preproc_plotter:main"
"megatop-noisespectra-run" = "megatop.pipeline.noise_spectra_estimater:main"
"megatop-noisespectra-plot" = "megatop.plot.noise_spectra_plotter:main"


[tool.ruff]
fix = true            # autofix issues when possible
force-exclude = true  # useful with ruff-pre-commit plugin
line-length = 100
exclude = ["scripts"]

[tool.ruff.lint]
extend-select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "D",    # pydocstyle
    "E1",   # pycodestyle-indentation
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FURB", # refurb
    # "G",    # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "NPY", # NumPy specific rules
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    # "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
]

# [tool.ruff.lint.pydocstyle]
# convention = "google"
